--- a/main.css
+++ b/main.css
@@ -35,13 +35,6 @@ body {
     height: auto;;
 }
 
-#boy-illustration{
-    position: absolute;
-    right: 7vw;
-    top: 145vh;
-    float: right;
-    z-index: -2;
-}
 
 #people-illustration{
     z-index: -2;
@@ -55,21 +48,34 @@ body {
 
 .launch-giveaway{
     float: right;
-    margin-top: 25vh;
     width: 35vw;
-    margin-right: 4vw;
-    /* background: yellow; */
+    margin-right: 7vw;
+    margin-top: 7vh;
 }
+
 
 .main-content{
     margin-top: 10vh;
-    margin-left: 4vw;
+    margin-left: 7vw;
     width: 30vw;
+    letter-spacing: 0.4px;
+    text-align: justify;
+}
+.main-content h1{
+    /* text-align: center; */
 }
 
+.main-content p {
+    line-height: 24px;
+}
+
+.main-content #below-submit {
+    font-size: 14px;
+    text-align: center;
+}
 .about-csi{
     margin-top: 70vh;
-    margin-left: 4vw;
+    margin-left: 7vw;
     width: 30vw;
     text-align: justify;
     color: white;
@@ -79,4 +85,89 @@ body {
     content: "";
     clear: both;
     display: table;
+}
+
+.ala{
+    display:inline-block;
+    vertical-align: 5px;
+}
+
+
+
+/* Tarush */
+
+.input-field {
+    width: 95%;
+    padding: 2.5%;
+    margin: 3% 0;
+    border-radius: 2px;
+    background-color: #ffffff;
+    border: solid 1px #666;
+    font-size: 14px;
+    letter-spacing: 0.4px;
+    font-weight: 400;
+}
+
+.input-container {
+    padding: 0 10%;
+}
+.submit {
+    font-size: 14px;
+    width: 100%;
+    border: 0;
+    padding: 3% 0;
+    margin-top: 5%;
+    margin-bottom: 2%;
+    color: white;
+    border-radius: 3px;
+    background-color: #3a41c5;
+    letter-spacing: 0.4px;
+}
+
+.chapter-and-more {
+    margin-top: 15%;
+}
+.social {
+    display: inline-block;
+    width: 32.3%;
+}
+
+@media screen and (max-width: 1800px) and (min-width: 1365px) {
+    .about-csi {
+        margin-top: 50vh;
+    }
+
+    .chapter-and-more {
+        margin-top: 25%;
+    }
+    
+}
+
+
+/* End Tarush */
+
+/* begin Pranshu */
+
+@media screen and (max-width: 1365px) and (min-width: 1317px) {
+    .about-csi {
+        margin-top: 45vh;
+    }
+    .chapter-and-more {
+        margin-top: 15%;
+    }
+    .launch-giveaway{
+            margin-top: 11vh;
+    }
+}
+
+@media screen and (max-width: 1317px) and (min-width: 900px) {
+    .about-csi {
+        margin-top: 35vh;
+    }
+    .chapter-and-more {
+        margin-top: 15%;
+    }
+    .launch-giveaway{
+            margin-top: 11vh;
+    }
 }
