--- a/main.css
+++ b/main.css
@@ -57,9 +57,6 @@ body {
     letter-spacing: 0.4px;
     text-align: justify;
 }
-.main-content h1 {
-    /* text-align: center; */
-}
 
 .main-content p {
     line-height: 24px;
@@ -134,9 +131,6 @@ body {
     .chapter-and-more {
         margin-top: 25%;
     }
-    body {
-        /* background: yellow; */
-    }
 }
 
 /* End Tarush */
@@ -167,6 +161,27 @@ body {
     }
 }
 
+#small .fa-facebook {
+    color: #3b5998;
+  }
+
+#small .fa-twitter {
+    color: #1da1f2;  
+  }
+#small .fa-instagram {
+    color: transparent;
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+    transition-duration: 0.4s;
+}
+
 /*  End Pranshu  */
 
 /* Begin Akshay */
@@ -188,9 +203,6 @@ body {
     }
     .launch-giveaway {
         margin-top: 20vh;
-    }
-    body {
-        /* background: red; */
     }
 }
 
@@ -238,7 +250,7 @@ body {
 
 /* PAVITHRA breakpoint */
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1138px) {
     div.desktop {
         display: block;
     }
@@ -246,13 +258,19 @@ body {
         display: none;
     }
 }
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1138px) {
     div.small_screen {
         display: block;
+        background: white;
     }
     div.desktop {
         display: none;
     }
+
+    body{
+        background: #F5F5F5;
+    }
+
 /* Pavithra CSS */
 
     div.small_screen {
@@ -344,6 +362,10 @@ body {
 
     a:hover {
         color: #3a41c5;
+    }
+
+    .logos{
+        width: 8vw;
     }
 
     tr {
