--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@ body {
     background-color: #ffffff;
     border: solid 1px #666;
     font-size: 14px;
-    letter-spacing: 0.4px;
+    letter-spacing: 0.8px;
     font-weight: 400;
 }
 
@@ -112,7 +112,8 @@ body {
     color: white;
     border-radius: 3px;
     background-color: #3a41c5;
-    letter-spacing: 0.4px;
+    letter-spacing: 1px;
+    transition: all 0.3s ease 0s;
 }
 
 .chapter-and-more {
@@ -176,10 +177,32 @@ body {
     -webkit-background-clip: text;
 }
 
-a {
+.social a {
     color: inherit;
     text-decoration: none;
     transition-duration: 0.4s;
+}
+
+.launch-giveaway a{
+    color: #3A41C5;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.launch-giveaway a:hover{
+    color: rgb(36, 46, 133);
+}
+
+
+#mobiletext a{
+    color: #3A41C5;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+
+.submit:hover{
+    background: rgb(36, 46, 133);
 }
 
 /*  End Pranshu  */
